homelab/unifi-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-mongodb
  namespace: unifi
  labels:
    app: unifi-mongodb
spec:
  type: ClusterIP
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    app: unifi-mongodb
