homelab/unifi-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: unifi-unifi-skip-verify@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: unifi.k8s.hu.ls
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-controller-external
            port:
              number: 8443
  tls:
  - hosts:
    - unifi.k8s.hu.ls
---
# ExternalName service to point to k3s-home node
# Update the externalName to your k3s-home node IP or hostname
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller-external
  namespace: unifi
spec:
  type: ExternalName
  externalName: k3s-home  # Change to your k3s-home node IP/hostname
  ports:
  - name: web-ui
    port: 8443
    protocol: TCP
